feat: init get movies endpoint
