# docs/swagger.yaml
@@ -215,6 +215,53 @@ paths:
       summary: Health check
       tags:
       - 1. Health
+  /movies:
+    get:
+      consumes:
+      - application/json
+      description: Get all movies
+      parameters:
+      - default: 20
+        in: query
+        maximum: 20
+        minimum: 1
+        name: limit
+        type: integer
+      - default: 0
+        in: query
+        minimum: 0
+        name: offset
+        type: integer
+      - in: query
+        maxLength: 100
+        name: search
+        type: string
+      - default: desc
+        enum:
+        - asc
+        - desc
+        in: query
+        name: sort
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema: {}
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get movies
+      tags:
+      - 5. Movies
   /rentals/{id}:
     get:
       consumes:
